--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@mui/icons-material": "^6.1.9",
     "@mui/x-data-grid": "^7.22.3",
     "axios": "^1.7.2",
     "react": "^18.2.0",
