--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "recharts": "^2.13.3",
+    "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
