--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@heroicons/react": "^2.0.13",
     "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
+    "@mui/system": "^6.1.9",
     "@mui/x-data-grid": "^7.22.3",
     "axios": "^1.7.2",
     "react": "^18.2.0",
