--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.13",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
+    "@mui/styled-engine-sc": "^6.1.9",
     "@mui/system": "^6.1.9",
     "@mui/x-data-grid": "^7.22.3",
     "axios": "^1.7.2",
